# toxic-detection-toolkit

./: README.md  pyproject.toml
apps/dashboard/: app.py
data/jigsaw/jigsaw/: preview.jsonl
src/toxicity_toolkit/: cli.py
src/toxicity_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/toxicity_toolkit/data/: datamodule.py
src/toxicity_toolkit/data/adapters/: hatexplain.py  jigsaw.py
src/toxicity_toolkit/explain/: shap_explain.py
src/toxicity_toolkit/infer/: predictor.py
src/toxicity_toolkit/models/: multilabel_bert.py
src/toxicity_toolkit/train/: metrics.py  trainer.py
