[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-toolkit"
version = "0.1.0"
description = "Open-source modular toxic content detection toolkit"
authors = [{ name = "Community Contributors" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "torch>=2.1.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "shap>=0.44.0",
  "lime>=0.2.0.1",
  "streamlit>=1.37.0",
  "plotly>=5.22.0"
]

[project.scripts]
toxdet = "toxicity_toolkit.cli:app"
